Added GS_LOCAL_MERGE option. If GS_LOCAL_MERGE is set, a local merge will be performed on 'git done' with the target-branch and the target will then be pushed. GS_LOCAL_MERGE is false by default. Minor cleanup.

--- a/config
+++ b/config
@@ -21,6 +21,7 @@ export GS_EDGE_BRANCH
 # Done
 export GS_PRINT_CHECKLIST=false
 export GS_PROMPT_ON_DONE=false
+export GS_LOCAL_MERGE=false
 
 # Project Website
 export GS_HAS_GITHUB=true
