Stability fixes for 'dev' & 'done' commands. Improved git-pull-and-check-status. Removed ability to inline commit messages for 'done' extension. Added config vars. Updated src/messages, docs and README.

--- a/config
+++ b/config
@@ -22,6 +22,7 @@ export GS_EDGE_BRANCH
 export GS_PRINT_CHECKLIST=false
 export GS_PROMPT_ON_DONE=false
 export GS_LOCAL_MERGE=false
+export GS_TEST_ON_DONE=true
 
 # Project Website
 export GS_HAS_GITHUB=true
