config fix, readme and git browse updates

--- a/config
+++ b/config
@@ -31,13 +31,13 @@ export GS_PROJECT_URL # No need to setup if project hosted on Github. If set it 
 
 
 # Prompts
-export GS_CHECKLIST_MESSAGE=$(cat <<EOF
+export GS_CHECKLIST_MESSAGE='
 Checklist:
    1. Have you written tests?
    2. Do all tests pass?
    3. Have you refactored your code?
    4. Are you ready for possible merge conflicts?
-EOF)
+'
 
 
 # git-story
