--- a/config
+++ b/config
@@ -12,7 +12,7 @@ export GS_PRE_COMMIT_HOOK
 
 # Project integration
 export GS_PACKAGE
-export GS_RELEASE
+export GS_DEPLOY
 export GS_INSTALL
 export GS_PRODUCTION_BRANCH='heads/master'
 export GS_NEXT_VERSION_BRANCH
