--- a/config
+++ b/config
@@ -30,6 +30,7 @@ export GS_PROJECT_URL # No need to setup if project hosted on Github. If set it 
 
 
 # Prompts
+export GS_GRAPHIC_PROMPT=false
 export GS_CHECKLIST_MESSAGE='
 Checklist:
    1. Have you written tests?
